Fix jumping submenu items (#4157)
1) Modified main sass file to prevent submenu items from jumping.

--- a/src/Opit/Notes/UserBundle/Resources/public/css/main.scss
+++ b/src/Opit/Notes/UserBundle/Resources/public/css/main.scss
@@ -290,9 +290,8 @@ header{
 
 .subMenuItem{
     float:left;
-    position:relative;
     margin:0 0 0 10px;
-
+    
     a{
         background-color:$darkerGrayColor;
         font-weight: normal;
@@ -309,34 +308,39 @@ header{
 
     ul{
         background-color:$darkGrey;
-        top: inherit;
-        left:inherit;
-        margin:0;
         padding:0;
-        margin: -9px 0 0 0;
+        margin: -6px 0 0 0;
         display:none;
+        position:absolute;
         min-width:100px;
         @include border-bottom-left-radius(5px);
         @include border-bottom-right-radius(5px);
         @include border-top-right-radius(5px);
 
         li{
-            padding:0 10px 0 10px;
-            
             a{
                 background-color:$darkGrey;
-                @include border-radius(0);
+                display:inline-block;
                 width:100%;
-                height:100%;
+                padding:0 6px 0 6px;
+                
+                @include border-radius(0);
             }
         }
 
         li:first-child{
-            @include border-top-right-radius(5px);
+            a{
+                @include border-top-right-radius(5px);
+            }
         }
+        
         li:last-child{
             @include border-bottom-left-radius(5px);
-            @include border-bottom-right-radius(5px);
+            
+            a{
+                @include border-bottom-left-radius(5px);
+                @include border-bottom-right-radius(5px);
+            }
         }
 
         li:hover{
@@ -356,6 +360,7 @@ header{
     a.dropdown{
         @include border-bottom-left-radius(0);
         @include border-bottom-right-radius(0);
+        padding-bottom:12px;
     }
     
     ul{
